src/core/Claroline/CoreBundle/Tests/stub/plugin/extension/Valid/Simple/ValidSimple.php
<?php

namespace Valid\Simple;

use Claroline\CoreBundle\AbstractType\ClarolineExtension;

class ValidSimple extends ClarolineExtension
{
}